Refactor: one GUI system (Menu + MenuManager) manages every chest GUI
Each menu used its own InventoryHolder marker and its own click listener.
They now share a small framework in the menu package.

- Menu is the base class: a subclass gives a title, a size and draws
  buttons; it never listens for events or checks holders itself.
- Button/Click pair an item with its action, so click handling no longer
  reads ids back out of item PDC data (the menu_id key is removed).
- MenuManager is the only listener. It opens menus and tracks who has which
  one, cancels every click, shift-click and drag inside them, dispatches
  clicks to the button, ignores clicks under 120 ms apart so a double-click
  cannot buy twice, contains exceptions from a handler, redraws menus that
  ask for it, closes menus that report themselves invalid, and closes all of
  them on disable. openChild/back support nested menus.
- ShopMenu, RoleMenu and ArenaMenu are rebuilt on it. The shop redraws after
  each purchase and every second so cooldowns tick down; the arena picker
  refreshes every second so states and player counts stay live; the role
  picker gains a close button.
- Removed ShopListener, ShopHolder, RoleHolder and the menu click handler in
  LobbyListener. Menu-building code moved out of ShopService and RoleService.
- The ui.menu chest/dialog switch and registerMenuProvider are unchanged, and
  the Dialog-based menus are untouched.